gcp-deploy/argocd/bootstrap/flask-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: flask-app
spec:
  ingressClassName: nginx
  rules:
    - host: tsorefdaniel.me
    - http:
        paths:
          - path: /flask
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 5000
