gcp-deploy/argocd/bootstrap/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: tsorefdaniel.me
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: main
                port:
                  number: 80
    - host: tsorefdaniel.me
      http:
        paths:
          - pathType: Prefix
            path: "/v1"
            backend:
              service:
                name: default
                port:
                  number: 80
